# simple-autodiff

./: .gitignore  README.md  pyproject.toml
autodiff/: __init__.py  diff.py  ops.py  tensor.py
examples/: gd_linear_regression.py
simple_autodiff/: __init__.py  diff.py  ops.py  tensor.py
tests/: diff_tests.py  match_pytorch_tests.py  tensor_tests.py  test_diff.py  test_match_pytorch.py  test_tensor.py
